# job-finder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  notification_preferences.example.json  notification_preferences.json  pyproject.toml  sources.example.json
.github/workflows/: fetch-and-email.yml
docker/pgadmin/: servers.json
job_notifier/: __init__.py  api.py  ats_sources.json  config.py  database.py  db_cli.py  email_notifier.py  fetch_jobs.py  http_client.py  job_filters.py  models.py  normalizer.py  notification_preferences.py  notify_jobs.py  service.py
job_notifier/sources/: __init__.py  base.py  github_raw.py  greenhouse.py  lever.py
job_notifier/static/: dashboard.html
