[project]
name = "job-notifier"
version = "0.1.0"
description = "Raw internship and early-career job data fetchers."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
fetch-jobs = "job_notifier.fetch_jobs:main"
job-db = "job_notifier.db_cli:main"
notify-jobs = "job_notifier.notify_jobs:main"

[tool.setuptools.packages.find]
include = ["job_notifier*"]

[tool.setuptools.package-data]
job_notifier = ["*.json", "static/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"
